@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - add missing constants to export list (doh!)
 
 v0.0.1_02 2012-06-19 15:46:57 Europe/London
  - Add constant: HTTP_METHOD_NOT_ALLOWED (405)
